handle the Home screen please

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -35,7 +35,7 @@
     "@energyLabel": {
         "description": "Label for smart energy category"
     },
-    "trustLabel": "الثقة",
+    "trustLabel": "الأجهزة الكهربائية",
     "@trustLabel": {
         "description": "Label for trust category"
     },
