handle the some hardcoded values

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -533,5 +533,9 @@
     "searchCancelButton": "إلغاء",
     "@searchCancelButton": {
         "description": "زر إلغاء في شاشة البحث"
-    }
+    },
+    "workingHours": "أوقات الدوام",
+    "workingHoursDetails": "يومياً ما عدا العطل الرسمية",
+    "contactInfo": "معلومات الاتصال",
+    "contactDetails": "تفاصيل معلومات الاتصال"
 }
