Handle the responsiveness for an diffrent screen sizes

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -537,5 +537,9 @@
     "workingHours": "أوقات الدوام",
     "workingHoursDetails": "يومياً ما عدا العطل الرسمية",
     "contactInfo": "معلومات الاتصال",
-    "contactDetails": "تفاصيل معلومات الاتصال"
+    "contactDetails": "تفاصيل معلومات الاتصال",
+    "beyondCreativitySubtitle": "ما وراء الإبداع",
+    "@beyondCreativitySubtitle": {
+        "description": "Subtitle for beyond creativity section"
+    }
 }
